plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:21'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

javafx {
    version = "21"
    modules = [ 'javafx.controls' ]
}

application {
    mainClass = 'ocean.Main'
}

test {
    useJUnitPlatform()
    jvmArgs += [
            '--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
            '-Dtestfx.robot=glass',
            '-Dtestfx.headless=true',
            '-Dprism.order=sw',
            '-Djava.awt.headless=true',
    ]
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}
